Fix small form layout issue

--- a/styles.css
+++ b/styles.css
@@ -24,18 +24,15 @@ body {
 
 .row {
     display: flex;
-    gap: 30px;
-}
-
-input, button {
-    font: inherit;
+    gap: 20px;
 }
 
 input {
     font-weight: normal;
+    font-family: inherit;
     font-size: 1.4rem;
     padding: 2px 5px;
-    width: 160px;
+    width: 100%;
     border: 1px solid #E5E7EB;
 }
   
@@ -149,7 +146,7 @@ label {
 button {
     background: #596D48;
     color: #fff;
-    font-size: 1.6rem;
+    font-size: 1.5rem;
     font-weight: bold;
     padding: 10px 15px;
     border: none;
